--- a/docs/9-Drafts/ll-py-dsa.ipynb
+++ b/docs/9-Drafts/ll-py-dsa.ipynb
@@ -232,6 +232,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Meta Prep Guide\n",
+    "\n",
+    "\n",
+    "- Time and Space complexity, Big O\n",
+    "- Algo for DS from Scratch\n",
+    "- Practice...\n",
+    "\n",
+    "Big O\n",
+    "\n",
+    "- find the dependent variable, N or constant or whatever, see what changes when n doubles.\n",
+    "- the operations in for loop, like assignment and comparison, do matter but they add up as constant, like if there are 5 operations within a for loop, the complexity will be $5n$, but in Big O, we drop the constants. When N changes, the operations still remain the same, but repetition increases, so it is repetition that matters, and that is N here.\n",
+    "- Big O is not exact time to run, it tells, how is it going to scale, is it linear / quadratic etc.\n",
+    "- If you use a function in a loop, eg, `is_prime()` you should consider its complexity, even if you had not written it. Everything that is being executed matters.\n",
+    "- Be more specific with `n`, what is it? you can use other vars as well, like a is size of array, n is number of students and so on. You can have two variables to show complexity, $O(n + a)$, where n is number of elements in array, and a some other dependant. [?] add example.\n",
+    "- Drop non significant factors. eg, In $O(a^2 + a)$ you can drop a as it is not dominant as a increases, so complexity can be defined by just $O(a^2)$\n",
+    "\n",
+    "Problem Solving Tips\n",
+    "\n",
+    "- Listen for clues in the problem, notice the criteria specified, like sorted input array.\n",
+    "- draw and example, of input and output. Make your brain work for it, and that suggests an algorithms\n",
+    "- come up with Brute force algo, then figure out space and time complexity. Then try to optimize or make it more correct.\n",
+    "- Optimize your algo, this is major part of interview.\n",
+    "- Walk your algo before you code. It will save time.\n",
+    "- Write code.\n",
+    "- Verification Process. Check runtime, check values. Review code and explain what it does.\n",
+    "\n",
+    "Optimizing with BUD\n",
+    "\n",
+    "- BUD is Bottleneck, Unnecessary work, Duplicate work.\n",
+    "\n",
+    "- Bottleneck\n",
+    "  - The loop which is consuming most time is bottleneck, can you reduce that? Like in sorted array, if you are mathching a number, it does not make sense to match if array element is bigger than number.\n",
+    "\n",
+    "- Unnecessary Work\n",
+    "  - Can the operation be simplified, eg, can the mathematical equation be further solved so that there are less variables to compare.\n",
+    "\n",
+    "- Duplicate Work\n",
+    "  - See if you can reduce repeated computation by pre-computing them or by changing the data structure.\n",
+    "\n",
+    "- Optimizing with Space and Time\n",
+    "  - Trade Offs - Can you use more space to reduce time, eg pre-compute things and store, so that you trade off space but reduce time.\n",
+    "\n",
+    "- Optimizing with DIY\n",
+    "  - \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
