--- a/docs/9-Drafts/ll-py-dsa.ipynb
+++ b/docs/9-Drafts/ll-py-dsa.ipynb
@@ -1293,6 +1293,16 @@
    "source": [
     "## Problem Solving\n",
     "\n",
+    "Communication\n",
+    "\n",
+    "- Drive throught the problem - say what you understand\n",
+    "- Show your thought process - say what you think to solve it\n",
+    "- Ask questions - say the doubts you have\n",
+    "- Propose initial solution - say the brute force solution and list its problems too. State its space and time complexity.\n",
+    "- Optimize - keep finding better solution with less space and time complexity. redo and redo...\n",
+    "- Code - say out what code is doing, moving pointer, swapping things etc.\n",
+    "- Admit mistake - say out your mistake, be true\n",
+    "- Listen - actively show that your are listening, its big red flag is something is repeated twice. Its a help not to be ignored.\n",
     "\n",
     "Problem Solving\n",
     "\n",
@@ -1304,6 +1314,22 @@
     "- ask interviewer if something can be improved.\n",
     "- Practice daily and variety\n",
     "  - problem solving in python with data structures free book"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Behviour Interview - STAR Method\n",
+    "\n",
+    "This is situation based interview to get to know your behvioural skills. Like, _Describe a situation in which you were able to use persuasion to successfully convince someone to see things your way._ You can come up with STAR method:\n",
+    "\n",
+    "- **Situation**: be specific, not general.\n",
+    "- **Task**: what goal were you working towards.\n",
+    "- **Action**: keep focus on YOU, not team, use I not we.\n",
+    "- **Result**: describe outcome, take the credit.\n",
+    "\n",
+    "Link: <https://www.vawizard.org/wiz-pdf/STAR_Method_Interviews.pdf>"
    ]
   },
   {
