--- a/docs/1-Software-Engineering/data-structures-algorithms.ipynb
+++ b/docs/1-Software-Engineering/data-structures-algorithms.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Data Structures and Algorithms\n",
-    "\n",
-    "Link\n",
-    "\n",
-    "- [Python Data Structures and Algorithms](https://www.linkedin.com/learning/python-data-structures-and-algorithms)\n",
-    "- [Python Data Structures: Power of Linked Lists for Technical Interviews](linkedin.com/learning/python-data-structures-power-of-linked-lists-for-technical-interviews/)\n",
-    "\n",
+    "# Data Structures and Algorithms\n",
     "\n",
     "Recursion\n",
     "\n",
@@ -31,6 +25,52 @@
     "\n",
     "- Use bradth-first search, when finding shortest path between two nodes in a tree\n",
     "- Don't use it on tree having high branching factor.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## DSA Overview\n",
+    "\n",
+    "- **Why is DSA important?**\n",
+    "  - In every problem there is a budget, which defines time and money. Hence, it is important to understand the **cost of memory** and **time of execution**.\n",
+    "\n",
+    "- **Edge Cases**\n",
+    "  - extreme cases of input or situation\n",
+    "  - like: empty array, bad format\n",
+    "\n",
+    "- **Steps to solve a problem using DSA**\n",
+    "  1. state problem clearly\n",
+    "  2. define inputs and outputs and their formats\n",
+    "  3. state test cases and edge cases in english\n",
+    "  4. state correct solution in english\n",
+    "  5. code and test\n",
+    "  6. repeat 2-5\n",
+    "  7. analyze algo's complexity or inefficiency\n",
+    "  8. refactor code, test. repeat 2-8\n",
+    "\n",
+    "- **Best Practices in Coding using DSA**\n",
+    "  - create a function\n",
+    "  - give meaningful name and follow standards\n",
+    "  - do test driven development\n",
+    "  - 10 mins code built test repeat, small steps\n",
+    "  - abstract code into functions and make them generic. eg, repetitive logic can be moved to a separate function and used in changing condition function. as in binary-search logic is same but matching condition may vary, so make a generic binary-search function and use it in other functions.\n",
+    "  - The solving approach and coding both are important, **approach & right technique** is more important that coding\n",
+    "  - don't start coding directly, rather write clearly the problem statement and then solution in **plain english**, then code.\n",
+    "- linear search algorithm or brute force algorithm\n",
+    "  - simple, start from 0 and traverse whole array\n",
+    "\n",
+    "- **Time calculation of code execution**\n",
+    "  - `1Ghz` machine can execute `10^9` **instructions** in 1 second (giga = 9). Instructions are low level binary code. so a high level **python statement** can execute tens or thousands of instructions, but that's how you calculate execution time of once statement, and the **set of statements** in function and then number **iterations** of that function in worst case gives its complexity.\n",
+    "  - `iterations --of--> function of statements --having--> statement --build_of--> instructions --processed_on--> CPU`\n",
+    "\n",
+    "- **Analyze complexity and find inefficiency**\n",
+    "  - can you **reduce the number of iterations** in the loop? eg, use binary search instead of linear search on a sorted array.\n",
+    "  - complexity of algo is the **max time** it will take to finish, that is total time in **worst case**. it is usually based on the size of array `n`\n",
+    "  - **O(n)** or **Big O Notation** or 'Order of n' means that a code-block is executed `n` number of times at max.\n",
+    "  - **O(log n)** means that code will iterate `log n` times.\n"
    ]
   },
   {
@@ -1291,101 +1331,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem Solving\n",
-    "\n",
-    "Communication\n",
-    "\n",
-    "- Drive throught the problem - say what you understand\n",
-    "- Show your thought process - say what you think to solve it\n",
-    "- Ask questions - say the doubts you have\n",
-    "- Propose initial solution - say the brute force solution and list its problems too. State its space and time complexity.\n",
-    "- Optimize - keep finding better solution with less space and time complexity. redo and redo...\n",
-    "- Code - say out what code is doing, moving pointer, swapping things etc.\n",
-    "- Admit mistake - say out your mistake, be true\n",
-    "- Listen - actively show that your are listening, its big red flag is something is repeated twice. Its a help not to be ignored.\n",
-    "\n",
-    "Problem Solving\n",
-    "\n",
-    "- write algo, as comment\n",
-    "- inputs / outputs, edge cases, assumptions\n",
-    "- write flow, frame the code, not code.\n",
-    "- do dry run.\n",
-    "- find runtime of solution.\n",
-    "- ask interviewer if something can be improved.\n",
-    "- Practice daily and variety\n",
-    "  - problem solving in python with data structures free book"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Behviour Interview - STAR Method\n",
-    "\n",
-    "This is situation based interview to get to know your behvioural skills. Like, _Describe a situation in which you were able to use persuasion to successfully convince someone to see things your way._ You can come up with STAR method:\n",
-    "\n",
-    "- **Situation**: be specific, not general.\n",
-    "- **Task**: what goal were you working towards.\n",
-    "- **Action**: keep focus on YOU, not team, use I not we.\n",
-    "- **Result**: describe outcome, take the credit.\n",
-    "\n",
-    "Link: <https://www.vawizard.org/wiz-pdf/STAR_Method_Interviews.pdf>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Meta Prep Guide\n",
-    "\n",
-    "\n",
-    "- Time and Space complexity, Big O\n",
-    "- Algo for DS from Scratch\n",
-    "- Practice...\n",
-    "\n",
-    "Big O\n",
-    "\n",
-    "- find the dependent variable, N or constant or whatever, see what changes when n doubles.\n",
-    "- the operations in for loop, like assignment and comparison, do matter but they add up as constant, like if there are 5 operations within a for loop, the complexity will be $5n$, but in Big O, we drop the constants. When N changes, the operations still remain the same, but repetition increases, so it is repetition that matters, and that is N here.\n",
-    "- Big O is not exact time to run, it tells, how is it going to scale, is it linear / quadratic etc.\n",
-    "- If you use a function in a loop, eg, `is_prime()` you should consider its complexity, even if you had not written it. Everything that is being executed matters.\n",
-    "- Be more specific with `n`, what is it? you can use other vars as well, like a is size of array, n is number of students and so on. You can have two variables to show complexity, $O(n + a)$, where n is number of elements in array, and a some other dependant. [?] add example.\n",
-    "- Drop non significant factors. eg, In $O(a^2 + a)$ you can drop a as it is not dominant as a increases, so complexity can be defined by just $O(a^2)$\n",
-    "\n",
-    "Problem Solving Tips\n",
-    "\n",
-    "- Listen for clues in the problem, notice the criteria specified, like sorted input array.\n",
-    "- draw and example, of input and output. Make your brain work for it, and that suggests an algorithms\n",
-    "- come up with Brute force algo, then figure out space and time complexity. Then try to optimize or make it more correct.\n",
-    "- Optimize your algo, this is major part of interview.\n",
-    "- Walk your algo before you code. It will save time.\n",
-    "- Write code.\n",
-    "- Verification Process. Check runtime, check values. Review code and explain what it does.\n",
-    "\n",
-    "Optimizing with BUD\n",
-    "\n",
-    "- BUD is Bottleneck, Unnecessary work, Duplicate work.\n",
-    "\n",
-    "- Bottleneck\n",
-    "  - The loop which is consuming most time is bottleneck, can you reduce that? Like in sorted array, if you are matching a number, it does not make sense to match if array element is bigger than number.\n",
-    "\n",
-    "- Unnecessary Work\n",
-    "  - Can the operation be simplified, eg, can the mathematical equation be further solved so that there are less variables to compare.\n",
-    "\n",
-    "- Duplicate Work\n",
-    "  - See if you can reduce repeated computation by pre-computing them or by changing the data structure.\n",
-    "\n",
-    "- Optimizing with Space and Time\n",
-    "  - Trade Offs - Can you use more space to reduce time, eg pre-compute things and store, so that you trade off space but reduce time.\n",
-    "\n",
-    "- Optimizing with DIY\n",
-    "  - \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Binary Search\n",
     "\n",
     "It searches a **Sorted** list. Starts from mid and compares the item, in each comparison it gets to know in which half the item would be, hence, ignores the rest half. This makes the search possible in maximum, $\\log n$ times.\n",
@@ -1399,7 +1344,27 @@
     "  - what power of 2 gives 32? it is 5\n",
     "  - log 32 base 2, is what? it is 5\n",
     "\n",
-    "Hence, the it is `O(log n)` complexity algorithm."
+    "Hence, the it is `O(log n)` complexity algorithm.\n",
+    "\n",
+    "- **Binary Search Algorithm**\n",
+    "  - if an array is sorted\n",
+    "  - find the number in middle\n",
+    "  - then look left or right\n",
+    "  - complexity is `log(n)` - that means that in worst case the number of iterations will be `log(n)` for an array of length `n`\n",
+    "  \n",
+    "  - how?\n",
+    "    - lets say we do `k` iterations (at max) to search a number in array of length `n`, i.e. loop will run no more than k times and is hence worst case scenario, so\n",
+    "    - iter: 1, length: n/2\n",
+    "    - iter: 2, length: n/4 = n/2^2\n",
+    "    - iter: 3, length: n/4 = n/2^3\n",
+    "    - ...\n",
+    "    - iter: k, length: n/2^k, this is last iteration and we know in worst case the length will be reduced to 1.\n",
+    "    - `n/2^k = 1` or solve it to get\n",
+    "    - `k = log(n)` which means that the code will have to run maximum `log(n)` number of times.\n",
+    "\n",
+    "\n",
+    "- Links\n",
+    "  - [Binary Search, Linked Lists and Complexity | Data Structures and Algorithms in Python](https://www.youtube.com/watch?v=clTW4lydwOU&list=PLyMom0n-MBrpakdIZvnhd6PFUCKNAyKo1&index=1) - direct code, no plain algo dry run"
    ]
   },
   {
@@ -1632,7 +1597,7 @@
     "-|-|-\n",
     "Start  | Stop A | 6\n",
     "Start  | Stop B | 2\n",
-    "Stop A | Finish | $\\infinity$\n",
+    "Stop A | Finish | infinity\n",
     "\n",
     "...\n",
     "\n",
@@ -1802,17 +1767,115 @@
    "source": [
     "## Greedy Algorithms\n",
     "\n",
-    "Some problems do not have fast algo solution. You can identify them and use greedy strategy to find approximate solution. We use Greedy Algorithm\n",
-    "\n",
-    "## Dynamic Programming\n",
-    "\n",
-    "When there is a hard solution to a problem, we break down problem into small tasks and solve them, this is dynamic programming."
+    "Some problems do not have fast algo solution. You can identify them and use greedy strategy to find approximate solution. We use Greedy Algorithm\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Dynamic Programming\n",
+    "\n",
+    "When there is a hard solution to a problem, we break down problem into small tasks and solve them, this is dynamic programming.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Links\n",
+    "\n",
+    "- [Python Data Structures and Algorithms](https://www.linkedin.com/learning/python-data-structures-and-algorithms)\n",
+    "- [Python Data Structures: Power of Linked Lists for Technical Interviews](linkedin.com/learning/python-data-structures-power-of-linked-lists-for-technical-interviews/)\n",
+    "- [Grokking Algorithms: An Illustrated Guide for Programmers and Other Curious People - Book by Aditya Y. Bhargava](https://edu.anarcho-copy.org/Algorithm/grokking-algorithms-illustrated-programmers-curious.pdf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## University of California, Berkeley\n",
+    "\n",
+    "- **UC Berkeley** (UCB) is \"University of California\" located in Berkeley, California, USA. It has CS lectures that have open syllabus, course material with lecture slides/videos, assignments, available for free online in an organized manner.\n",
+    "  - Courses have a page and professor. Either videos are on course page, or go to prof youtube channel to find lectures.\n",
+    "\n",
+    "- **EECS UCB** is [Electrical Engineering and Computer Science](https://www2.eecs.berkeley.edu/) department.\n",
+    "- [EECS Courses](https://www2.eecs.berkeley.edu/Courses/CS/) cover all CS fundamental and advance courses. Each course has a page where you can see **prerequisites** which will be another course.\n",
+    "  - CS61A/B/C (alternatives CS47ABC)\n",
+    "    - 61A: Teaches you how to think like a programmer\n",
+    "    - 61B: The go-to class that turns a lot of people into great programmers/interested in software.\n",
+    "    - 61C: Everything left in CS that isn't taught in 61A/B: Low-level things. Clocks, CPUs, Assembly, C, etc.\n",
+    "    - skip/skim 61A all together and just watch/do 61B, then 61C stuff\n",
+    "    - Those who have taken these courses claim that after completing this series they feel like they can achieve or learn almost anything if they wanted because they are already well versed on the lingo and tools of CS that is programming, problem solving and low level stuff.\n",
+    "    - DA DSA\n",
+    "    - [CS 61A: Structure and Interpretation of Computer Programs](https://cs61a.org/)\n",
+    "      - Prof [JohnDeNero](https://denero.org/)\n",
+    "        - mostly teaches in Python\n",
+    "        - [youTube](https://www.youtube.com/@JohnDeNero) channel has all lecture assignment videos.\n",
+    "          - go to playlist to see all lectures\n",
+    "    - DataStructur.es\n",
+    "      - info about all CS61 courses\n",
+    "      - [Resources](https://sp23.datastructur.es/resources.html) Algo Visual\n",
+    "  - C9A/B/C/D/E/F/G/H\n",
+    "    - Basic programming courses\n",
+    "    - CS 9C. C for Programmers\n",
+    "    - CS 9D. Scheme and Functional Programming for Programmers\n",
+    "    - CS 9E. Productive Use of the UNIX Environment\n",
+    "  - [CS 186. Introduction to Database Systems](https://www2.eecs.berkeley.edu/Courses/CS186)\n",
+    "    - <https://cs186berkeley.net/>\n",
+    "  - CS 261. Security in Computer Systems\n",
+    "  - [CS 162: Operating Systems and System Programming](https://cs162.org/)\n",
+    "\n",
+    "\n",
+    "- [Programming Systems (PS)](https://www2.eecs.berkeley.edu/Research/Areas/PS/) - Area in UCB where many discoveries were done. It includes following courses\n",
+    "  - CS 61A. The Structure and Interpretation of Computer Programs\n",
+    "  - CS 61B. Data Structures\n",
+    "  - CS 164. Programming Languages and Compilers\n",
+    "  - CS 169. Software Engineering\n",
+    "  - CS 263. Design of Programming Languages\n",
+    "  - CS 264. Implementation of Programming Languages\n",
+    "  - CS 265. Compiler Optimization and Code Generation\n",
+    "  - CS C267. Applications of Parallel Computers\n",
+    "\n",
+    "- **Seasons** of the United States\n",
+    "  - Spring - March to May. Q2\n",
+    "  - Summer - June to August. Q3\n",
+    "  - Fall/Autumn - September to November. Q4\n",
+    "  - Winter - December to February. Q1\n",
+    "\n",
+    "- **Books** Recommended\n",
+    "  - [A Philosophy of Software Design](https://www.amazon.co.uk/Philosophy-Software-Design-John-Ousterhout/dp/1732102201) by John Ousterhout - recommended by student on reddit\n",
+    "\n",
+    "- **Links**\n",
+    "  - [Ask HN: CS61 series from Berkeley, the best set of foundational CS courses?](https://news.ycombinator.com/item?id=34965653)\n",
+    "\n",
+    "\n",
+    "### CS 61A: Structure and Interpretation of Computer Programs\n",
+    "\n",
+    "_prof John DeNero_\n",
+    "\n",
+    "CS61A - Fall 2023 - 37 Lectures have playlist on Youtube. Text on [site](https://cs61a.org/).\n",
+    "\n",
+    "### CS 61B Data Structures, Fall 2023\n",
+    "\n",
+    "- [Prof Josh Hug\n",
+    "](https://www.youtube.com/@joshhug1212/playlists) has lecture playlist. Other playlists can be found on [course page](https://fa23.datastructur.es/)\n",
+    "\n",
+    "### Explore Study Material\n",
+    "\n",
+    "UCB has best and open material based on reddit and your search.\n",
+    "\n",
+    "It will take 2-3 months to complete all lectures. So be patient and just do it without 2nd thought of result. It will benefit you.\n",
+    "\n",
+    "### Links\n",
+    "\n",
+    "- [DSA Guide - Quora](https://www.quora.com/How-do-I-start-learning-or-strengthen-my-knowledge-of-data-structures-and-algorithms/answer/Robin-Thomas-16)\n",
+    "- DSA <https://www.udacity.com/course/data-structures-and-algorithms-nanodegree--nd256>\n",
+    "- DSA Python <https://www.udemy.com/course/data-structures-and-algorithms-bootcamp-in-python/>\n",
+    "- Coding FAANG <https://www.udemy.com/course/master-the-coding-interview-big-tech-faang-interviews/>\n"
+   ]
   }
  ],
  "metadata": {
